# v6llvmc

./: .gitignore  LICENSE  README.md  temp_asm_test.c  temp_bubble.ll  temp_builtin_test.c  temp_clean.s  temp_dad_test.ll  temp_diag_test.c  temp_emul.s  temp_eq_asm.s  temp_eq_only.ll  temp_fib.ll  temp_max.ll  temp_multi.ll  temp_ne_before.txt  temp_ne_debug.txt  temp_ne_only.ll  temp_ne_stop_out.mir  temp_ref.s  temp_struct.ll  temp_test.ll  temp_test.s  temp_test2.ll  temp_test3.ll  temp_test_isolation.bat  temp_wrapped.s  temp_xchg_test.ll  test_big.asm  test_first100.asm  test_first20.asm  test_first50.asm  test_fmt.asm  test_hex.asm  test_hex2.asm  test_hex3.asm  test_subset.asm
.github/workflows/: release.yml
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  V6C.cpp  V6C.h
clang/lib/Driver/ToolChains/V6C/: v6c.ld
clang/lib/Driver/ToolChains/V6C/include/: stdlib.h  string.h  v6c.h
design/: TODO.md  Vector_06c_instruction_timings.md  design.md  design_improve_spilling.md  design_prompt.md  feature_plan_prompt.md  feature_prompt.md  future_optimizations.md  llvm_z80_analysis.md  pipeline_feature.md  plan.md  plan_O02_sequential_lxi_inx_folding.md  plan_O22_tti_cost_hooks.md  plan_O49_direct_memory_alu_isel.md  plan_O51_lsr_cost_tuning.md  plan_O54_optimal_stack_adjustment.md  plan_O55_mvi_zero_to_xra_a.md  plan_O61_spill_in_reload_immediate.md  plan_O61_spill_in_reload_immediate_stage2.md  plan_O61_spill_in_reload_immediate_stage3.md  plan_O61_spill_in_reload_immediate_stage4.md  plan_O61_spill_in_reload_immediate_stage5.md  plan_O61_spill_in_reload_immediate_stage6.md  plan_O64_liveness_aware_i8_spill_lowering.md  plan_O67_i8_rotate_isel_via_rlc_rrc.md  plan_O68_wide_shl_rotate_dad_h.md  plan_O69_direct_frame_index_stack_load_pseudos.md  plan_O70_math_header.md  plan_O71_V6C_LOAD16_P_redesign.md  plan_O72_V6C_STORE16_P_redesign.md  plan_O73_V6C_LOAD16_G_redesign.md  plan_O74_V6C_STORE16_G_redesign.md  plan_O75_flag_producing_arith_sdnodes.md  plan_O76_V6C_LOAD8_P_redesign.md  plan_O77_V6C_STORE8_P_redesign.md  plan_O78_V6C_STORE8_IMM_P_redesign.md  plan_O79_mvi_alu_reg_to_alu_imm_fold.md  plan_O80_cmp8_zero_inr_dcr.md  plan_O80_string_header.md  plan_O81_header_consolidation.md  (+42 more)
design/future_plans/: O01_redundant_mov_elimination.md  O02_sequential_lxi_inx_folding.md  O03_narrow_type_arithmetic.md  O04_add_sub_m_direct_memory.md  O05_build_pair_add16_fusion.md  O06_lda_sta_absolute_addr.md  O07_loop_strength_reduction.md  O08_spill_optimization.md  (+84 more)
docs/: README.md  V6CArchitecture.md  V6CBackendOverview.md  V6CBuildGuide.md  V6CCallingConvention.md  V6CClangUsage.md  V6CCompilerOptions.md  V6CIPRA.md  V6CInlineAsmGuide.md  V6CInstructionTimings.md  V6COptimization.md  V6CProjectStructure.md  V6CRelease.md  V6CRuntimeAndInlineAsm.md  V6CStaticStackAlloc.md  benchmarks.md
scripts/: bin2hex.py  build_release.ps1  build_v6c_runtime.ps1  elf2bin.py  elf2bin_legacy.py  elf_text_hex.py  make_dist.ps1  o51_ab_measure.py  populate_llvm_project.ps1  sync_llvm_mirror.ps1  v6c_link.py  validate_dist.ps1
tests/: addi16_loop-O2.s  addi16_loop_shl.c  run_all.py  run_golden_tests.py  run_runtime_tests.py
tmp/: fannkuch_os.s  fk_o2.s  fk_o2_norevsr.s  v6cii_with_srl16.cpp
tools/: z88dk_release.json
(+786 files in other folders)
